# bookstore-back/src/main/webapp/swagger.json
@@ -44,6 +44,15 @@
         "description" : "",
         "operationId" : "createBook",
         "consumes" : [ "application/json" ],
+        "parameters" : [ {
+          "in" : "body",
+          "name" : "body",
+          "description" : "Book to be created",
+          "required" : true,
+          "schema" : {
+            "$ref" : "#/definitions/Book"
+          }
+        } ],
         "responses" : {
           "201" : {
             "description" : "The book is created"
